k8s-manifest/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: image-annotation-tool-service
spec:
  selector:
    app: image-annotation-tool
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 80
